# secure_sum

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  cooldown.toml  default_metric.toml  deny.toml  dist-workspace.toml  reasonable_default_metrics.toml
.github/: dependabot.yml
.github/workflows/: build_release_binaries.yml  check_for_code_updates.yml  check_for_updates.yml  check_licenses.yml  checks.yml  pr_checks.yml  sbom.yml
scripts/: .gitignore  check_dependency_scores.sh  check_licenses.sh  check_own_scores.sh  download_example_files.sh  edit_release.sh  freeze_requirements.sh  generate_code.py  generate_code.sh  list_todos.sh  publish.sh  python_cmd.sh  requirements.txt  test_token.sh  trigger_release.sh  update.sh  update_python_requirements.sh
src/: args.rs  cumulated_probe.rs  error.rs  filesystem.rs  github_token.rs  http.rs  input.rs  logging.rs  main.rs  metric.rs  metric_impl.rs  metrics.rs  post_evaluate.rs  probe.rs  probe_name.rs  probe_result.rs  repodata.rs  score.rs  scorecard.rs  target.rs  url.rs
src/ecosystem/: depfile.rs  enum_impl.rs  mod.rs  node_js.rs  nuget.rs  rust.rs
system_tests/: example_metric.toml  example_metrics.toml  reasonable_default_metrics.toml  rust_cargo.toml  test.sh  tiny_metric.toml  tiny_metrics.toml
