[package]
name = "secure_sum"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["color", "error-context", "derive", "help", "std", "suggestions"] }
chrono = { version = "0.4.39", default-features = false, features = ["now", "serde"]}
dotenvy = { version = "0.15.0", default-features = false }
etcetera = { version = "0.10.0", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng-compat"] } # Decompression
log ={ version = "0.4.22", default-features = false }
reqwest = { version = "0.12.14", features = ["blocking", "native-tls-vendored"] }
sanitize-filename = { version = "0.6.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json  = { version = "1.0", default-features = false, features = ["std"]}
quick-xml = { version = "0.37.0", features = ["serialize"] }
simple_logger = { version = "5.0", default-features = false }
tabled = { version = "0.18.0", default-features = false, features = ["derive", "macros"] }
thiserror = { version = "2.0", default-features = false }
tar = { version = "0.4.43", default-features = false } # Decompression
toml ={ version = "0.8.19", default-features = false, features = ["display", "parse"]}

[dev-dependencies]
serial_test = { version = "3.2", default-features = false }
tempfile = { version = "3.19", default-features = false }
