[package]
name = "secure_sum"
version = "1.0.0"
edition = "2024"
authors = ["Simon Heidrich (heidrich@aunovis.de)"]
description = "Utilizes OSSF Scorecard to probe open source repositories for their security posture using a customizable metric."
readme = "README.md"
repository = "https://github.com/aunovis/secure_sum"
license = "MIT"
keywords = ["scorecard", "supplychain", "cybersecurity"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5", default-features = false, features = ["color", "error-context", "derive", "help", "std", "suggestions"] }
chrono = { version = "0.4.39", default-features = false, features = ["now", "serde"]}
dotenvy = { version = "0.15.0", default-features = false }
etcetera = { version = "0.10.0", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] } # Decompression
log ={ version = "0.4.22", default-features = false }
reqwest = { version = "0.12.12", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json  = { version = "1.0", default-features = false, features = ["std"]}
quick-xml = { version = "0.37.0", features = ["serialize"] }
regex = { version = "1.0", default-features = false }
simple_logger = { version = "5.0", default-features = false }
tabled = { version = "0.18.0", default-features = false, features = ["derive", "macros"] }
thiserror = { version = "2.0", default-features = false }
tar = { version = "0.4.43", default-features = false } # Decompression
toml ={ version = "0.8.19", default-features = false, features = ["display", "parse"]}

[dev-dependencies]
serial_test = { version = "3.2", default-features = false }
tempfile = { version = "3.15", default-features = false }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
